tests/ui/feature-gates/feature-gate-overlapping_marker_traits.stderr
error[E0119]: conflicting implementations of trait `MyMarker`
  --> $DIR/feature-gate-overlapping_marker_traits.rs:6:1
   |
LL | impl<T: Display> MyMarker for T {}
   | ------------------------------- first implementation here
LL | impl<T: Debug> MyMarker for T {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
